# electron-app

./: .gitignore  .npmrc  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  test-editor.html  test-screenshot.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
.cursor/rules/: electron.mdc
docs/: TODO.md  architecture.md  ipc-analysis-2026-04-02.md  ipc-deep-dive.md  ipc-single-event-chain.md  macos-signing.md  vscode-ipc-analysis.md  vscode-ipc-flow.md  windows-exe-signing.md
native/: Cargo.toml  index.d.ts  index.js  package.json  screenshot-native.linux-x64-gnu.node
native/src/: lib.rs
src/ipc/common/: baseChannel.ts  buffer.ts  channel.ts  event.ts  ipc.ts  serializer.ts  types.ts
src/ipc/electron-browser/: client.ts
src/ipc/electron-main/: protocol.ts  server.ts
src/main/: ElectronApp.ts  IPCChannelManager.ts  WindowManager.ts  backgroundWindow.ts  index.ts
src/main/channels/: AppChannel.ts  BackgroundChannel.ts  FileChannel.ts  HttpChannel.ts  ScreenshotChannel.ts
src/main/windows/: ScreenshotEditorWindow.ts
src/preload/: index.ts  screenshot-editor.ts
src/renderer/: api.ts  background.html  background.ts  env.d.ts  index.html  main.ts  screenshot-editor.html
src/renderer/api/: appApi.ts  backgroundApi.ts  createApp.ts  fileApi.ts  httpApi.ts  index.ts
src/renderer/screenshot-editor/: main.ts
src/types/: background.d.ts  electron.d.ts  file.d.ts  http.d.ts  index.d.ts  ipc.d.ts  preload.d.ts  screenshot.d.ts
src/worker/: registerServices.ts
(+2 files in other folders)
