[package]
name = "screenshot-native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha", default-features = false, features = ["napi9", "tokio_rt"] }
napi-derive = "3.0.0-alpha"
xcap = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
